--- a/SectionB/docker-compose.yaml
+++ b/SectionB/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - POSTGRES_PASSWORD=1234
       - POSTGRES_USER=postgres
       - POSTGRES_DB=sectionb
+      - DB_HOST=db_service
 
   backend_service:
     build: .
@@ -20,6 +21,7 @@ services:
       - POSTGRES_DB=sectionb
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=1234
+      - DB_HOST=db_service
 
     depends_on:
       - db_service
